change bitcoin mining description text

--- a/locales/ar/common.json
+++ b/locales/ar/common.json
@@ -15,9 +15,9 @@
   "about_us_description_2": "نهدف إلى جعل عمليات التعدين أكثر سهولة وفعالية للجميع، دون الحاجة إلى استثمار مبالغ كبيرة أو امتلاك خبرة تقنية عالية. مع إنفست سمارت، يمكنك بدء رحلتك في استثمار البيتكوين بثقة وأمان.",
   "about_us_description_3": "نحن نؤمن بقوة عملات البيتكوين ونسعى لتوفير فرص استثمار متميزة للجميع. انضم إلينا لتكون جزءًا من مستقبل الاستثمار.",
   "project_title": "مشروع تعدين البيتكوين",
-  "project_description_1": "مشروعنا هو منصة مبتكرة لتعدين البيتكوين. يتيح للمستثمرين فرصة المشاركة في عملية تعدين البيتكوين، وهي العملية التي يتم من خلالها التحقق من معاملات البيتكوين وتأمين الشبكة، وذلك مقابل مكافآت مالية بالبيتكوين.",
-  "project_description_2": "عبر استخدام أحدث تقنيات التعدين وأكثرها فعالية، نوفر للمستثمرين عوائد شهرية ثابتة دون الحاجة إلى تحمل التكاليف الباهظة أو التعقيدات التقنية. يمكنك البدء بالاستثمار بسهولة وبأقل قدر من التعقيدات مع ضمان كامل لأمان العمليات.",
-  "project_description_3": "مع فريق متخصص وخبرة عميقة في مجال عملات البيتكوين، نضمن لك عملية استثمار آمنة وفعالة في تعدين البيتكوين.",
+  "project_description_1": "شركة Invest Smart هيه فكرة قبل ان تكون شركة بمعنى تم انشاء فكرة تعدين البتكوين عن طريق صناديق استثمار بشكل جماعي لتسهيل على المستثمر دخوله الى فكرة تعدين البتكوين ويكون له الاستفاده في هذا التعدين بحيث انه يتم ايداع مبلغ بمقدوره مبلغ بسيط ويكون له عائد ربحي من تعدين البتكوين بشكل جميعي يتم الشرح اكثر بعد تسجيل البيانات وتواصل مع احد موظفي شركة Invest Smart.",
+  "project_description_2": "ملاحظه بانه شركة Invest Smart هيه شركة وساطه ما بين العميل وما بين شركة التعدين شركة الام بمعنى يوجد اتفاقيه بين Invest Smart و شركة الام للتعدين بانشاء هذه الفكره للمستثمرين لعندهم رغبة في تعدين البتكوين ولكن لا يوجد لديهم قدرة في المبالغ العاليه.",
+  "project_description_3": "لانه بالنهايه تكلفة جهاز التعدين الواحد الدور الجديد يتراوح ما بين ٤،٢٠٠$ الى ٤،٧٠٠$ حسب العرض والطلب. لذلك تم انشاء هذه الفكره بتكوين صناديق استثمار جماعي لتعدين البتكوين.\n\nلكم اطيب التحيات والشكر والتقدير فريق العمل 💡Invest Smart.",
   "launch_title": "بدء مشروع تعدين البيتكوين",
   "launch_description_1": "سينطلق مشروعنا لتعدين البيتكوين قريبًا. نحن نعمل حاليًا على تجهيز المنصة لتكون جاهزة لاستقبال المشاركين. سيكون المشروع متاحًا بمجرد وصول عدد المشاركين بين 3500 إلى 4000 شخص، حيث سيتم الإعلان عن موعد الإطلاق الرسمي في وقت لاحق.",
   "launch_description_2": "نهدف إلى توفير فرصة استثمار مميزة في مجال تعدين البيتكوين، مع ضمان توفير كافة الوسائل اللازمة لضمان تجربة استثمار آمنة وفعالة. استعد للانضمام إلى المشروع وتحقيق عوائد مالية ممتازة في المستقبل القريب.",
